--- a/manifest.json
+++ b/manifest.json
@@ -49,7 +49,8 @@
     "vtex.store-icons": "0.x",
     "vtex.search": "2.x",
     "vtex.product-list": "0.x",
-    "vtex.checkout-summary": "0.x"
+    "vtex.checkout-summary": "0.x",
+    "vtex.store-form": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
