--- a/store/blocks/desktop/screen/header.jsonc
+++ b/store/blocks/desktop/screen/header.jsonc
@@ -15,5 +15,6 @@
         "fullWidth": true
       },
       "children": ["vtex.menu@2.x:menu#global__websites"]
+      // "children":["mega-menu#desktop", "mega-menu-trigger-btn"]
     }
   }
