add footer form

--- a/manifest.json
+++ b/manifest.json
@@ -50,7 +50,7 @@
     "vtex.search": "2.x",
     "vtex.product-list": "0.x",
     "vtex.checkout-summary": "0.x",
-    "vtex.store-form": "0.x"
+    "vtex.store-newsletter": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
