--- a/store/blocks/global/components/image.jsonc
+++ b/store/blocks/global/components/image.jsonc
@@ -6,5 +6,21 @@
           "url": "assets/images/maconline_logo.png",
           "width": "180"
         }
-   }
+   },
+   "image#global__footer__row2__col3--img1": {
+    "props": {
+      "src": "assets/images/footer/footer_webpay.png",
+      "maxHeight": "100%"
+    }
+  },
+  "image#global__footer__row2__col4--img1":{  
+     "props": {
+    "src": "assets/images/footer/footer_adobe.png",
+    "maxHeight": "100%"
+  }},
+  "image#global__footer__row3__col1--img1":{  
+    "props": {
+   "src": "assets/images/footer/footer_maconline.png",
+   "maxHeight": "100%"
+ }}
 }
