--- a/store/blocks/global/components/image.jsonc
+++ b/store/blocks/global/components/image.jsonc
@@ -22,5 +22,48 @@
     "props": {
    "src": "assets/images/footer/footer_maconline.png",
    "maxHeight": "100%"
- }}
+ }},
+ 
+ "image#global__footer__row2-1_col1--img1" :{  
+    "props": {
+   "src": "assets/images/footer/24_cuotas.png",
+   "maxHeight": "100%",
+   "blockClass":"global__footer__row2-1_col1--img1"
+ }},
+ "image#global__footer__row2-1_col1--img2":{  
+  "props": {
+ "src": "assets/images/footer/santander-white.svg",
+ "maxHeight": "100%",
+ "blockClass":"global__footer__row2-1_col1--img2"
+}},
+"image#global__footer__row2-1_col1--img3":{  
+  "props": {
+ "src": "assets/images/footer/bancodechile-white.svg",
+ "maxHeight": "100%",
+ "blockClass":"global__footer__row2-1_col1--img3"
+}},
+"image#global__footer__row2-1_col1--img4":{  
+  "props": {
+ "src": "assets/images/footer/bci-white.svg",
+ "maxHeight": "100%",
+ "blockClass":"global__footer__row2-1_col1--img4"
+}},
+"image#global__footer__row2-1_col1--img5":{  
+  "props": {
+ "src": "assets/images/footer/scotiabank-white.svg",
+ "maxHeight": "100%",
+ "blockClass":"global__footer__row2-1_col1--img5"
+}},
+"image#global__footer__row2-1_col1--img6":{  
+  "props": {
+ "src": "assets/images/footer/itau-white.svg",
+ "maxHeight": "100%",
+ "blockClass":"global__footer__row2-1_col1--img6"
+}},
+"image#global__footer__row2-1_col1--img7":{  
+  "props": {
+ "src": "assets/images/footer/bice-white.svg",
+ "maxHeight": "100%",
+ "blockClass":"global__footer__row2-1_col1--img7"
+}}
 }
