--- a/store/blocks/mobile/screen/footer.jsonc
+++ b/store/blocks/mobile/screen/footer.jsonc
@@ -23,6 +23,7 @@
   
     "flex-layout.row#mobile__footer__row2": {
       "children": [
+        "newsletter-form#global__footer__form",
         "flex-layout.col#mobile__footer__row2_col1",
         "flex-layout.col#mobile__footer__row2_col2",
         "flex-layout.col#mobile__footer__row2_col3",
@@ -78,7 +79,7 @@
     },
     "flex-layout.col#mobile__footer__row2_col5": {
       "children": [
-        // "newsletter-form#footer"
+     
       ]
     },
     "flex-layout.row#mobile__footer__row3": {
