fix footer form in tablet resolution

--- a/store/blocks/mobile/screen/footer.jsonc
+++ b/store/blocks/mobile/screen/footer.jsonc
@@ -27,8 +27,8 @@
         "flex-layout.col#mobile__footer__row2_col1",
         "flex-layout.col#mobile__footer__row2_col2",
         "flex-layout.col#mobile__footer__row2_col3",
-        "flex-layout.col#mobile__footer__row2_col4",
-        "flex-layout.col#mobile__footer__row2_col5"
+        "flex-layout.col#mobile__footer__row2_col4"
+        // "flex-layout.col#mobile__footer__row2_col5"
       ],
       "props": {
         "blockClass": "mobile__footer__row2"
