--- a/store/blocks/global/components/breadcrumb.jsonc
+++ b/store/blocks/global/components/breadcrumb.jsonc
@@ -1,5 +1,9 @@
 {
-    "breadcrumb.search#global__breadcrumb":{
+    "breadcrumb.search#global__breadcrumb--plp":{
+        "title": "miga de pan de la plp"
+    },
+    "breadcrumb.search#global__breadcrumb--pdp":{
+        "title": "miga de pan de la pdp"
     }
 }
 
