--- a/store/blocks/global/screen/product.jsonc
+++ b/store/blocks/global/screen/product.jsonc
@@ -1,30 +1,19 @@
 {
     "store.product": {
-      "children": ["flex-layout.row#global__product__row1"]
+        "children": [
+            "flex-layout.row#global__product__row1"
+        ]
     },
     "flex-layout.row#global__product__row1": {
-        "props": {
-          "marginTop": 6
-        },
         "children": [
-          "flex-layout.col#global__product__col1",
-          "flex-layout.col#global__product__col2"
+            "flex-layout.col#global__product__col1",
+            "flex-layout.col#global__product__col2"
         ]
-      }, 
-      "flex-layout.col#global__product__col1": {
+    },
+    "flex-layout.col#global__product__col1": {
         "children": [
-          "product-images"
+            "breadcrumb.search#global__breadcrumb--pdp"
         ]
-      },
-      "flex-layout.col#global__product__col2": {
-        "children": [
-            "product-summary-name",
-            "product-summary-description",
-            "product-summary-image",
-            "product-summary-price",
-            "product-summary-sku-selector",
-            "product-summary-buy-button"
-        ]
-      }
-     
-  }
+    },
+    "flex-layout.col#global__product__col2": {}
+}
